--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         
         <div class="stats">
             <div class="stat-row">
-                <span>Available Tokens:</span>
+                <span>Bank Tokens:</span>
                 <span id="tokenCount">0</span>
             </div>
             <div class="stat-row">
