--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
             justify-content: center;
             gap: clamp(5px, 1vw, 10px);
             flex-wrap: wrap;
+            width: 100%;
         }
 
         #depositBtn {
