--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             }
 
             .action-buttons {
-                flex-direction: row;
+                flex-direction: column;
                 gap: 5px;
             }
 
