--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
             align-items: center; /* Ensure buttons are centered vertically */
         }
 
+        .token-buttons button {
+            flex: 1 1 auto; /* Allow buttons to grow and shrink as needed */
+            min-width: 50px; /* Ensure a minimum width */
+            max-width: 100px; /* Set a maximum width for the buttons */
+        }
+
         /* Shared button styles */
         .token-btn {
             border: none;
