--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
                 grid-template-columns: repeat(2, 1fr);
                 justify-items: center;
                 gap: 12px;
+                flex-wrap: wrap;
             }
 
             .token-buttons button {
