--- a/index.html
+++ b/index.html
@@ -221,13 +221,13 @@
 
             .token-buttons {
                 display: grid;
-                grid-template-columns: repeat(3, 1fr);
+                grid-template-columns: repeat(5, 1fr);
                 justify-items: center;
                 gap: 12px;
             }
 
             .action-buttons {
-                flex-direction: column;
+                flex-direction: row;
                 gap: 5px;
             }
 
