--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
         /* Updated platinum button style to align the number */
         #platinumBtn {
-            width: clamp(60px, 12vw, 65px);
-            height: clamp(40px, 8vw, 45px);
+            width: clamp(50px, 12vw, 65px);
+            height: clamp(30px, 8vw, 45px);
             border-radius: 6px;
             background: linear-gradient(145deg, #E5E4E2, #B4B4B4);
             box-shadow: 
@@ -108,7 +108,7 @@
         /* Diamond-shaped button */
         .diamond-btn {
             width: clamp(40px, 12vw, 50px);    /* 30% smaller than before */
-            height: clamp(50px, 12vw, 50px);   /* 30% smaller than before */
+            height: clamp(40px, 12vw, 50px);   /* 30% smaller than before */
             transform: rotate(45deg);
             box-shadow: 
                 inset 0 -2px 2px rgba(0,0,0,0.2),
@@ -227,7 +227,7 @@
             }
 
             .action-buttons {
-                flex-direction: row;
+                flex-direction: column;
                 gap: 5px;
             }
 
