--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
             #depositBtn, #resetBtn {
                 width: 100%;
-                min-width: unset;
+                min-width: 50px;
             }
         }
 
