--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
         /* Updated platinum button style to align the number */
         #platinumBtn {
-            width: clamp(50px, 12vw, 65px);
-            height: clamp(30px, 8vw, 45px);
+            width: clamp(60px, 12vw, 65px);
+            height: clamp(40px, 8vw, 45px);
             border-radius: 6px;
             background: linear-gradient(145deg, #E5E4E2, #B4B4B4);
             box-shadow: 
@@ -227,7 +227,7 @@
             }
 
             .action-buttons {
-                flex-direction: column;
+                flex-direction: row;
                 gap: 5px;
             }
 
