--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             display: flex;
             justify-content: center;
             gap: clamp(5px, 1vw, 10px);
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
             width: 100%;
         }
 
