--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <span id="tokenCount">0</span>
             </div>
             <div class="stat-row">
-                <span>Jar Value:</span>
+                <span>Deposit Value:</span>
                 <span id="jarValue">0</span>
             </div>
             <div class="stat-row">
@@ -291,7 +291,7 @@
             </div>
             <div class="action-buttons">
                 <button id="depositBtn" onclick="handleDeposit()" disabled>Deposit to Vault</button>
-                <button id="resetBtn" onclick="resetJar()">Reset Jar</button>
+                <button id="resetBtn" onclick="resetJar()">Reset Deposit</button>
             </div>
         </div>
 
